@@ -2,7 +2,7 @@ dependencies {
     compile project(':core.api')
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: seleniumVersion
     compile group: 'org.hamcrest', name: 'hamcrest', version: hamcrestVersion
-    compile (group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.2.0') {
+    compile (group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.3.0') {
         exclude group: 'org.seleniumhq.selenium'
     }
     compile (group: 'org.seleniumhq.selenium', name: 'selenium-server', version: seleniumVersion) {
@@ -16,9 +16,7 @@ dependencies {
 
 test {
     useTestNG()
-    options.suites("property.suite.xml")
-    options.suites("step.suite.xml")
-    options.suites("webdriver.suite.xml")
+    jvmArgs '-Xmx20484m', '-XX:MaxPermSize=1024m', '-XX:+HeapDumpOnOutOfMemoryError'
 }
 
 task javadocJar(type: Jar) {
